Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-47030

Fix date_time_support code to not produce exceptions

    • Fully Compatible
    • ALL
    • v4.4, v4.2, v4.0
    • Query 2020-04-06, Query 2020-04-20, Query 2020-05-04, Query 2020-05-18, Query 2020-06-01
    • 45

      We use date_time_support to produce string versions of dates. It currently throws exceptions. We need to reign in this behaviour so it doesn't cause the failure of queries when we attempt to produce informational strings.

            Assignee:
            jacob.evans@mongodb.com Jacob Evans
            Reporter:
            jacob.evans@mongodb.com Jacob Evans
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: