SERVER-47030 Fix date_time_support to not throw exceptions