src/mongo/db/pipeline/expression.cpp
@@ -1873,10 +1873,12 @@ Value ExpressionDateToString::evaluate(const Document& root, Variables* variable
             return Value(BSONNULL);
         }
 
-        return Value(timeZone->formatDate(formatValue.getStringData(), date.coerceToDate()));
+        return Value(uassertStatusOK(
+            timeZone->formatDate(formatValue.getStringData(), date.coerceToDate())));
     }
 
-    return Value(timeZone->formatDate(Value::kISOFormatString, date.coerceToDate()));
+    return Value(
+        uassertStatusOK(timeZone->formatDate(Value::kISOFormatString, date.coerceToDate())));
 }
 
 void ExpressionDateToString::_doAddDependencies(DepsTracker* deps) const {
@@ -5178,8 +5180,8 @@ public:
             };
         table[BSONType::Date][BSONType::String] =
             [](const boost::intrusive_ptr<ExpressionContext>& expCtx, Value inputValue) {
-                auto dateString = TimeZoneDatabase::utcZone().formatDate(Value::kISOFormatString,
-                                                                         inputValue.getDate());
+                auto dateString = uassertStatusOK(TimeZoneDatabase::utcZone().formatDate(
+                    Value::kISOFormatString, inputValue.getDate()));
                 return Value(dateString);
             };
         table[BSONType::Date]
