src/mongo/db/query/datetime/date_time_support.cpp
@@ -558,9 +558,12 @@ void TimeZone::validateFromStringFormat(StringData format) {
     return validateFormat(format, kDateFromStringFormatMap);
 }
 
-std::string TimeZone::formatDate(StringData format, Date_t date) const {
+StatusWith<std::string> TimeZone::formatDate(StringData format, Date_t date) const {
     StringBuilder formatted;
-    outputDateWithFormat(formatted, format, date);
-    return formatted.str();
+    auto status = outputDateWithFormat(formatted, format, date);
+    if (status != Status::OK())
+        return status;
+    else
+        return formatted.str();
 }
 }  // namespace mongo
